fix: BufferResource test inits